<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher"
                android:layout_marginTop="32dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/e_mail"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/gradient_button_background" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="text|textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/gradient_button_background" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                style="@android:style/Widget.Button"
                android:background="@drawable/gradient_button_background"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="goToRegister" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>