<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher"
                android:layout_marginTop="32dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="2dp"
                    android:hint="@string/first_name"
                    android:textAlignment="center"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/gradient_button_background" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/last_name"
                    android:textAlignment="center"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/gradient_button_background" />
            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/e_mail"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/gradient_button_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="2dp"
                    android:hint="@string/password"
                    android:textAlignment="center"
                    android:ems="10"
                    android:inputType="text|textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/gradient_button_background" />

                <EditText
                    android:id="@+id/confirm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/confirm"
                    android:textAlignment="center"
                    android:ems="10"
                    android:inputType="text|textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@drawable/gradient_button_background" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                style="@android:style/Widget.Button"
                android:background="@drawable/gradient_button_background"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/register"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="goToLogin" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>