<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/card_color"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/coachListItem_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/coachListItem_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/coachListItem_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="17sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ratingContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/card_color"
        app:layout_constraintTop_toBottomOf="@+id/textContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RatingBar
            android:id="@+id/coachListItem_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.5"
            android:isIndicator="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            style="@style/CustomRatingBar"/>

        <ImageButton
            android:id="@+id/seeMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_24"
            android:contentDescription="Zobacz"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            app:tint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Wyślij zgłoszenie"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/violet"
        app:layout_constraintTop_toBottomOf="@+id/ratingContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
